--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "web-ext": "^6.6.0"
   },
   "scripts": {
-    "dev": "web-ext run --source-dir src"
+    "dev": "web-ext run --source-dir src -u https://steamcommunity.com/id/PryosCode/inventory#730",
+    "build": "web-ext build --source-dir src"
   },
   "repository": {
     "type": "git",
