--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,15 +1,16 @@
 {
   "manifest_version": 2,
   "name": "CS:GO Inventory Assistant",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "A browser extension to provide a better CS:GO inventory experience.",
   "permissions": [
-    "https://api.csgofloat.com/*",
-    "https://api.csgoskins.gg/*"
+    "*://api.csgofloat.com/*",
+    "*://cs.deals/API/*",
+    "*://api.csgoskins.gg/*"
   ],
   "content_scripts": [
     {
-      "matches": [ "https://steamcommunity.com/*/inventory*" ],
+      "matches": [ "*://steamcommunity.com/*/inventory*" ],
       "js": [ "main.js" ]
     }
   ]
