--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,26 +2,33 @@ name: Build
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    branches:
+      - master
 
 jobs:
   build:
-
+    name: Build
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [12.x, 14.x, 16.x]
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
+    
+    - name: Checkout GitHub
+      uses: actions/checkout@v2
+
+    - name: Setup Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+        node-version: 16
+
+    - name: Build
+      run: |
+        echo VERSION=$(node -p "require('./package.json').version") >> $GITHUB_ENV
+        npm run build
+
+    - name: Release GitHub
+      uses: softprops/action-gh-release@v1
+      with:
+        files: web-ext-artifacts/*.zip
+        tag_name: v${{ env.VERSION }}
+        fail_on_unmatched_files: true
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
