--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,8 +28,8 @@ jobs:
     - name: Upload GitHub
       uses: actions/upload-artifact@v2
       with:
-        name: CSGOIA
         path: web-ext-artifacts/cs_go_inventory_assistant-${{ env.VERSION }}.zip
+        if-no-files-found: error
 
     - name: Release GitHub
       uses: softprops/action-gh-release@v1
