--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,12 +22,13 @@ jobs:
     - name: Build
       run: |
         echo VERSION=$(node -p "require('./package.json').version") >> $GITHUB_ENV
-        npm install
-        npm run build
+        yarn install
+        yarn build
 
     - name: Upload GitHub
       uses: actions/upload-artifact@v2
       with:
+        name: CSGOIA
         path: web-ext-artifacts/cs_go_inventory_assistant-${{ env.VERSION }}.zip
         if-no-files-found: error
 
