--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "csgoia",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "A browser extension to provide a better CS:GO inventory experience.",
   "keywords": [
     "csgo",
@@ -11,9 +11,9 @@
   "license": "Apache-2.0",
   "private": true,
   "author": {
-     "name": "PryosCode",
-     "email": "info@pryoscode.net",
-     "url": "https://www.pryoscode.net/"
+    "name": "PryosCode",
+    "email": "info@pryoscode.net",
+    "url": "https://pryoscode.net"
   },
   "bugs": {
     "url": "https://github.com/PryosCode/CSGOIA/issues",
@@ -40,6 +40,7 @@
     "@typescript-eslint/parser": "^5.8.0",
     "babel-loader": "^8.2.3",
     "concurrently": "^6.5.1",
+    "copy-webpack-plugin": "^10.2.0",
     "eslint": "^8.5.0",
     "eslint-webpack-plugin": "^3.1.1",
     "typescript": "^4.5.4",
