--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,11 @@
 {
   "author": "PryosCode",
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "csgoia@pryoscode.net",
+      "strict_min_version": "42.0"
+    }
+  },
   "content_scripts": [
     {
       "matches": [ "*://steamcommunity.com/*/inventory*" ],
