--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "csgoia",
-  "version": "0.4.3",
+  "version": "0.5.0",
   "description": "A browser extension to provide a better CS:GO inventory experience.",
   "keywords": [
     "csgo",
@@ -25,28 +25,30 @@
   },
   "scripts": {
     "dev:bundle": "webpack watch --mode=development",
-    "dev:browser": "wait-on build && web-ext run --source-dir build -u https://steamcommunity.com/id/PryosCode/inventory#730",
+    "dev:browser": "wait-on build && web-ext run -t chromium --source-dir build -u https://steamcommunity.com/id/PryosCode/inventory#730",
     "dev": "concurrently \"yarn dev:bundle\" \"yarn dev:browser\"",
     "build:bundle": "webpack --mode=production",
     "build:pack": "web-ext build --overwrite-dest --source-dir build",
     "build": "yarn build:bundle && yarn build:pack"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.5",
-    "@babel/preset-env": "^7.16.5",
-    "@babel/preset-typescript": "^7.16.5",
-    "@babel/register": "^7.16.5",
-    "@typescript-eslint/eslint-plugin": "^5.8.0",
-    "@typescript-eslint/parser": "^5.8.0",
+    "@babel/core": "^7.16.7",
+    "@babel/preset-env": "^7.16.8",
+    "@babel/preset-typescript": "^7.16.7",
+    "@babel/register": "^7.16.9",
+    "@types/webextension-polyfill": "^0.8.2",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
     "babel-loader": "^8.2.3",
-    "concurrently": "^6.5.1",
+    "concurrently": "^7.0.0",
     "copy-webpack-plugin": "^10.2.0",
-    "eslint": "^8.5.0",
+    "eslint": "^8.7.0",
     "eslint-webpack-plugin": "^3.1.1",
     "typescript": "^4.5.4",
     "wait-on": "^6.0.0",
     "web-ext": "^6.6.0",
-    "webpack": "^5.65.0",
+    "webextension-polyfill": "^0.8.0",
+    "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1"
   }
 }
